[gd_scene load_steps=5 format=3 uid="uid://bdhgciibr3cjd"]

[ext_resource type="Script" path="res://main.gd" id="1_ovhk2"]
[ext_resource type="FontFile" uid="uid://dipmrwwymkh3j" path="res://fonts/eb_garamond.ttf" id="2_67xfp"]

[sub_resource type="Theme" id="Theme_wsi7s"]

[sub_resource type="Theme" id="Theme_glxuj"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_wsi7s")
script = ExtResource("1_ovhk2")
metadata/_edit_lock_ = true

[node name="BgBox" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 0.94902, 0.909804, 1)

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 100

[node name="StoryTextLabel" type="Label" parent="MainVBox/MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_colors/font_color = Color(0.266667, 0.266667, 0.266667, 1)
theme_override_constants/line_spacing = -4
theme_override_fonts/font = ExtResource("2_67xfp")
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ChoicesMargin" type="MarginContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ChoicesHBox" type="HBoxContainer" parent="MainVBox/ChoicesMargin"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChoicesBg" type="PanelContainer" parent="MainVBox/ChoicesMargin/ChoicesHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChoicesInnerMargin" type="MarginContainer" parent="MainVBox/ChoicesMargin/ChoicesHBox/ChoicesBg"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ChoicesContainer" type="GridContainer" parent="MainVBox/ChoicesMargin/ChoicesHBox/ChoicesBg/ChoicesInnerMargin"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 2

[node name="Choice1Margin" type="MarginContainer" parent="MainVBox/ChoicesMargin/ChoicesHBox/ChoicesBg/ChoicesInnerMargin/ChoicesContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Choice2Margin" type="MarginContainer" parent="MainVBox/ChoicesMargin/ChoicesHBox/ChoicesBg/ChoicesInnerMargin/ChoicesContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Choice3Margin" type="MarginContainer" parent="MainVBox/ChoicesMargin/ChoicesHBox/ChoicesBg/ChoicesInnerMargin/ChoicesContainer"]
layout_mode = 2

[node name="Choice4Margin" type="MarginContainer" parent="MainVBox/ChoicesMargin/ChoicesHBox/ChoicesBg/ChoicesInnerMargin/ChoicesContainer"]
layout_mode = 2

[node name="Choice5Margin" type="MarginContainer" parent="MainVBox/ChoicesMargin/ChoicesHBox/ChoicesBg/ChoicesInnerMargin/ChoicesContainer"]
layout_mode = 2

[node name="Choice6Margin" type="MarginContainer" parent="MainVBox/ChoicesMargin/ChoicesHBox/ChoicesBg/ChoicesInnerMargin/ChoicesContainer"]
layout_mode = 2

[node name="Inventory" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
size_flags_vertical = 0
theme = SubResource("Theme_glxuj")

[node name="InventoryBg" type="PanelContainer" parent="Inventory"]
show_behind_parent = true
layout_mode = 2
size_flags_horizontal = 3

[node name="InnerInventory" type="HBoxContainer" parent="Inventory/InventoryBg"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryItems" type="HBoxContainer" parent="Inventory/InventoryBg/InnerInventory"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 16.0

[node name="MoneyLabel" type="Label" parent="Inventory/InventoryBg/InnerInventory"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
theme_override_fonts/font = ExtResource("2_67xfp")
theme_override_font_sizes/font_size = 38
text = "$0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoodSmiley" type="TextureRect" parent="Inventory/InventoryBg/InnerInventory"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryHoverLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 60.0
offset_right = 376.0
offset_bottom = 109.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
autowrap_mode = 3

[node name="DebugBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -85.0
grow_horizontal = 0
grow_vertical = 0

[node name="CurrentNodeLabel" type="Label" parent="DebugBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="GoToNode" type="HBoxContainer" parent="DebugBox"]
layout_mode = 2

[node name="InputField" type="LineEdit" parent="DebugBox/GoToNode"]
layout_mode = 2

[node name="SubmitButton" type="Button" parent="DebugBox/GoToNode"]
layout_mode = 2
text = "Submit"

[node name="MoodSection" type="HBoxContainer" parent="DebugBox"]
layout_mode = 2

[node name="MoodLabel" type="Label" parent="DebugBox/MoodSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.94902, 0.909804, 1)
